--- a/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
+++ b/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
@@ -192,6 +192,14 @@
           text-align: center;
 
         }
+		.status-pending{
+		  color: white;
+		  background-color: #F7C04C;
+		  border-radius: 20px;
+		  padding: 5px;
+		  width: 100px;
+		  text-align: center;
+		}
         .status-inactive{
           color: white;
           background-color: #AE5453;
