--- a/Angular/src/app/pages/account/auth/auth.component.html
+++ b/Angular/src/app/pages/account/auth/auth.component.html
@@ -167,7 +167,7 @@
 							<div class="forgotPass">
 								<div class="form-group form-check">
 									<input type="checkbox" class="form-check-input" id="exampleCheck1">
-									<label class="form-check-label" for="exampleCheck1">Check me out</label>
+									<label class="form-check-label" for="exampleCheck1">Remember me</label>
 								</div>
 								<div class=" pt-1 mb-5 pb-1">
 									<a class="text-muted" routerLink="/checkemail">Forgot password?</a>
