[Angular] update tyre

--- a/Angular/src/app/pages/home/control-pannel/control-pannel.component.html
+++ b/Angular/src/app/pages/home/control-pannel/control-pannel.component.html
@@ -52,7 +52,13 @@
         </div>
     </div>
     <div class="infos">
+      <div class="rearWheel">
+          0.9 Bar
+      </div>
         <img src="./assets/tyre.png" alt="infos">
+        <div class="frontWheel">
+            1.7 Bar
+        </div>
     </div>
 
 </div>
