--- a/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
+++ b/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
@@ -126,12 +126,23 @@
         width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        flex-direction: row;
+        // justify-content: center;
+        // align-items: center;
         img{
-            width: 30%;
-            height: 30%;
+            width: 80%;
+            height: 80%;
+        }
+        .frontWheel{
+            margin-top: -2.5%;
+            margin-left: -10%;
+            font-size: 18px;
+
+        }
+        .rearWheel{
+            margin-top: 63%;
+            margin-right: -10%;
+            font-size: 18px;
         }
     }
 }
