--- a/Angular/src/app/layout/topbar/topbar.component.html
+++ b/Angular/src/app/layout/topbar/topbar.component.html
@@ -1,9 +1,9 @@
 <div class="header">
 	<mat-icon class="search-icon">search</mat-icon>
 	<div class="cont">
-    <button class="butn" (click)="vehicule()">Your vehicule</button>
-    <button class="butn" (click)="Location()">Location</button>
-    <button class="butn" (click)="ControlPanel()">Control Panel</button>
+    <button class="butn" [ngStyle]="BtnVehicule" (click)="vehicule()">Your vehicule</button>
+    <button class="butn" [ngStyle]="BtnLocation" (click)="Location()">Location</button>
+    <button class="butn" [ngStyle]="BtnControlPanel" (click)="ControlPanel()">Control Panel</button>
 	</div>
 
 	<div class="actions">
