--- a/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
+++ b/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
@@ -1,11 +1,11 @@
 .container{
-    margin: 120px 0px 120px 120px;
+    margin: 120px 0px 120px 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     .controle{
         display: flex;
         flex-direction: column;
@@ -137,7 +137,6 @@
             margin-top: -2.5%;
             margin-left: -10%;
             font-size: 18px;
-
         }
         .rearWheel{
             margin-top: 63%;
