--- a/Angular/src/app/pages/home/dash-sa-vtechnicien/dash-sa-vtechnicien.component.html
+++ b/Angular/src/app/pages/home/dash-sa-vtechnicien/dash-sa-vtechnicien.component.html
@@ -1,26 +1,13 @@
 <app-topbar></app-topbar>
 <div class="board">
     <div class="container">
-        <div class="nbSavTechnicians card">
-            <div class="col">
-                <h5 class="card-title text-uppercase text-muted mb-0">
-                    Sav Technicians number
-                </h5>
-                <div class="data SavTechnician">
-                    <span class="h2 font-weight-bold mb-0">20</span>
-                    <div class="stat">
-                        <mat-icon>equalizer</mat-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="nbScooterOwners card">
             <div class="col">
                 <h5 class="card-title text-uppercase text-muted mb-0">
                     Scooter Owners number
                 </h5>
                 <div class="data ScooterOwners">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0">{{ scooterOwners }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
