--- a/Angular/src/app/pages/home/dash-sa-vmanager/dash-sa-vmanager.component.html
+++ b/Angular/src/app/pages/home/dash-sa-vmanager/dash-sa-vmanager.component.html
@@ -7,7 +7,7 @@
                     Sav Technicians number
                 </h5>
                 <div class="data SavTechnician">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0">{{ savTechnicians }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
@@ -20,7 +20,7 @@
                     Scooter Owners number
                 </h5>
                 <div class="data ScooterOwners">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0">{{ scooterOwners }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
@@ -34,6 +34,19 @@
                 </h5>
                 <div class="data Scooters">
                     <span class="h2 font-weight-bold mb-0">{{bikes}}</span>
+                    <div class="stat">
+                        <mat-icon>equalizer</mat-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="nbAdmins card">
+            <div class="col">
+                <h5 class="card-title text-uppercase text-muted mb-0">
+                    My Claims
+                </h5>
+                <div class="data admins">
+                    <span class="h2 font-weight-bold mb-0">{{myClaims}}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
