--- a/Angular/src/app/pages/home/dash-super-admin/dash-super-admin.component.html
+++ b/Angular/src/app/pages/home/dash-super-admin/dash-super-admin.component.html
@@ -7,7 +7,7 @@
                     Admins number
                 </h5>
                 <div class="data admins">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0">{{ admins }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
@@ -20,7 +20,7 @@
                     Sav Managers number
                 </h5>
                 <div class="data SavManger">
-                    <span class="h2 font-weight-bold mb-0">200</span>
+                    <span class="h2 font-weight-bold mb-0">{{ savManagers }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
@@ -34,7 +34,7 @@
                     Sav Technicians number
                 </h5>
                 <div class="data SavTechnician">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0"> {{ savTechnicians }} </span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
@@ -48,7 +48,7 @@
                     Scooter Owners number
                 </h5>
                 <div class="data ScooterOwners">
-                    <span class="h2 font-weight-bold mb-0">20</span>
+                    <span class="h2 font-weight-bold mb-0"> {{ scooterOwners }}</span>
                     <div class="stat">
                         <mat-icon>equalizer</mat-icon>
                     </div>
