[AG] Add profile nav com

--- a/Angular/src/app/pages/account/profile/nav-profile/nav-profile.component.html
+++ b/Angular/src/app/pages/account/profile/nav-profile/nav-profile.component.html
@@ -1,1 +1,13 @@
-<p>nav-profile works!</p>
+<div class="header">
+  <div class="cont">
+    <h1>Welcome To PIXII Profile</h1>
+  </div>
+
+  <div class="actions">
+    <img class="avatar" src="./assets/pdp/{{ profile?.image }}" />
+    <div class="hello">
+      Hello, <span class="name">{{ name?.name }}</span>
+    </div>
+    <mat-icon class="more-icon">arrow_drop_down</mat-icon>
+  </div>
+</div>
