--- a/Angular/src/app/pages/account/profile/profile.component.html
+++ b/Angular/src/app/pages/account/profile/profile.component.html
@@ -1,7 +1,6 @@
 <app-navbar>
-  <!-- <app-nav-bar-profile>
-
-  </app-nav-bar-profile> -->
+  <app-topbar></app-topbar>
+<app-nav-profile></app-nav-profile>
   <div>
     <div class="board">
       <div class="container">
