--- a/Angular/src/app/pages/home/home.component.scss
+++ b/Angular/src/app/pages/home/home.component.scss
@@ -108,3 +108,40 @@
       }
     }
 }
+
+.card-norole{
+	width: 50%;
+	height: 50%;
+	margin-left: 20px;
+	background-color: white;
+	border-radius: 9px;
+	color: $secondary-component-color;
+	// center
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	transform: translate(-50%, -50%);
+	.card-title{
+		font-size: 32px;
+		font-weight: 600;
+		color: #dc3545;
+		margin: 15px;
+	}
+	.card-text{
+		margin: 20px;
+		font-size: 28px;
+		line-height: 1.5;
+		color: $main-component-color;
+	}
+	.icon{
+		margin-top: 15%;
+		text-align: center;
+		transform: scale(5);
+		color: #dc3545;
+	}
+}
