--- a/Angular/src/app/pages/home/control-pannel/control-pannel.component.html
+++ b/Angular/src/app/pages/home/control-pannel/control-pannel.component.html
@@ -1,64 +1,95 @@
 <div class="container">
-    <div class="controle">
-        <div class="circles">
-          <div class="average">
-            <div class="average-second">
-                <div class="average-third">
-                    12.5 Km/h
-                </div>
-            </div>
-          </div>
-          <div class="distance">
-            <div class="distance-second">
-                <div class="distance-third">
-                    92581 Km
-                </div>
-            </div>
+	<div class="controle">
+		<div class="circles">
+			<div class="average">
+				<div class="average-second">
+					<div class="average-third">
+						12.5 Km/h
+					</div>
+				</div>
+			</div>
+			<div class="distance">
+				<div class="distance-second">
+					<div class="distance-third">
+						92581 Km
+					</div>
+				</div>
 
-          </div>
-        </div>
-        <div class="buttons">
-            <div class="control-btn">
-                <div class="btn-group">
-                  <button class="btn"><mat-icon class="icon">lock_open</mat-icon></button>
-                  <div class="text">Unlock</div>
-                </div>
-                <div class="btn-group">
-                  <button class="btn"><mat-icon class="icon">lock</mat-icon></button>
-                  <div class="text">Lock</div>
-                </div>
-            </div>
-            <div class="control-btn">
-                <div class="btn-group">
-                    <button class="btn"><mat-icon class="icon">flash_off</mat-icon></button>
-                    <div class="text">Light off</div>
-                  </div>
-                  <div class="btn-group">
-                    <button class="btn"><mat-icon class="icon">flash_on</mat-icon></button>
-                    <div class="text">Light On</div>
-                  </div>
+			</div>
+		</div>
+		<div class="buttons">
+			<div class="control-btn">
+				<div class="btn-group">
+					<button [ngClass]="{
+						'btn':true,
+						'btn-active':!IsLocked
+				  }"
+				  (click)="LockBike(false)" 
+				  ><mat-icon class="icon">lock_open</mat-icon></button>
+					<div class="text">Unlock</div>
+				</div>
+				<div class="btn-group">
+					<button  [ngClass]="{
+						'btn':true,
+						'btn-active':IsLocked
+				  }"
+				  (click)="LockBike(true)" 
+				  
+				  ><mat-icon class="icon">lock</mat-icon></button>
+					<div class="text">Lock</div>
+				</div>
+			</div>
+			<div class="control-btn">
+				<div class="btn-group">
+					<button  [ngClass]="{
+						'btn':true,
+						'btn-active':!IsLight
+				  }"
+				  (click)="LightBike(false)" 
+				  ><mat-icon class="icon">flash_off</mat-icon></button>
+					<div class="text">Light off</div>
+				</div>
+				<div class="btn-group">
+					<button  [ngClass]="{
+						'btn':true,
+						'btn-active':IsLight
+				  }"
+				  (click)="LightBike(true)" 
+				  ><mat-icon class="icon">flash_on</mat-icon></button>
+					<div class="text">Light On</div>
+				</div>
 
-            </div>
-            <div class="control-btn">
-                <div class="btn-group">
-                    <button class="btn"><mat-icon class="icon">notifications_off</mat-icon></button>
-                    <div class="text">Alarm off</div>
-                </div>
-                <div class="btn-group">
-                    <button class="btn"><mat-icon class="icon">notifications_active</mat-icon></button>
-                    <div class="text">Alarm On</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="infos">
-      <div class="rearWheel">
-          0.9 Bar
-      </div>
-      <img src="./assets/tyre.png" alt="infos">
-      <div class="frontWheel">
-          1.7 Bar
-      </div>
-    </div>
+			</div>
+			<div class="control-btn">
+				<div class="btn-group">
+					<button  [ngClass]="{
+						'btn':true,
+						'btn-active':!IsAlarm
+				  }"
+				  (click)="AlarmBike(false)" 
+				  ><mat-icon class="icon">notifications_off</mat-icon></button>
+					<div class="text">Alarm off</div>
+				</div>
+				<div class="btn-group">
+					<button  [ngClass]="{
+						'btn':true,
+						'btn-active':IsAlarm
+				  }"
+				  (click)="AlarmBike(true)" 
+				  ><mat-icon class="icon">notifications_active</mat-icon></button>
+					<div class="text">Alarm On</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="infos">
+		<div class="rearWheel">
+			0.9 Bar
+		</div>
+		<img src="./assets/tyre.png" alt="infos">
+		<div class="frontWheel">
+			1.7 Bar
+		</div>
+	</div>
 
 </div>
