--- a/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
+++ b/Angular/src/app/pages/home/control-pannel/control-pannel.component.scss
@@ -114,7 +114,16 @@
                         border-radius: 9px;
                         background-color: #ffffff;
                         border: none;
-                        color: #F48242;
+						&-active{
+							color: #F48242;
+						}
+						&-disabled{
+							color: #91715e;
+						}
+						box-shadow: 0px 0px 10px 0px rgba(109, 109, 109, 0.642);
+						font-weight: bold;
+						font-size: 18px;
+						margin-bottom: 10px;
                     }
                 }
 
