display bike location name and bike id

--- a/Angular/src/app/pages/home/dash-scooter-owner/dash-scooter-owner.component.html
+++ b/Angular/src/app/pages/home/dash-scooter-owner/dash-scooter-owner.component.html
@@ -22,7 +22,7 @@
                           <div class="item">
                             <mat-icon style="padding-top: 3px;" class="icon">pin_drop</mat-icon>
 
-                            <p>Your motorcycle</p>
+                            <p>{{locationName}}</p>
                             <!-- <mat-icon class="menu-button" [ngClass]="{'rotated' :
                             showSubmenu}" *ngIf="isExpanded ||
                                isShowing" style="color: white; " class="float-right">expand_more</mat-icon> -->
@@ -36,8 +36,8 @@
 
                       <div class="col-md-6">
                         <div class="item">
-                          <mat-icon style="padding-top: 4px;" class="icon">settings</mat-icon>
-                          <p>Your motorcycle</p>
+                          <mat-icon style="padding-top: 4px;" class="icon">pin</mat-icon>
+                          <p>{{BikeData?.id}}</p>
                         </div>
 
                       </div>
