--- a/Angular/src/app/layout/topbar/topbar.component.html
+++ b/Angular/src/app/layout/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-	<mat-icon class="search-icon">search</mat-icon>
+	<!-- <mat-icon class="search-icon">search</mat-icon> -->
 	<div class="cont">
         <div *ngIf="isScooterOwner && showOptions">
           <button class="butn" [ngStyle]="BtnVehicule" (click)="vehicule()">Your vehicule</button>
