[AG] Dynamic pp and user name

--- a/Angular/src/app/layout/topbar/topbar.component.html
+++ b/Angular/src/app/layout/topbar/topbar.component.html
@@ -9,9 +9,8 @@
 	</div>
 
 	<div class="actions">
-		<img class="avatar"
-			src="https://resize.elle.fr/article/var/plain_site/storage/images/loisirs/cinema/news/avatar-2-une-premiere-bande-annonce-en-mai-4010741/96462268-1-fre-FR/Avatar-2-une-premiere-bande-annonce-en-mai.jpg" />
-		<div class="hello">Hello, <span class="name">{{authUser?.userName??""}}</span></div>
+		<img class="avatar" [src]="env + '/user-photos/' + profile?.image"/>
+		<div class="hello">Hello, <span class="name">{{ name?.name }}</span></div>
 		<button [matMenuTriggerFor]="menu" mat-icon-button>
 			<mat-icon class="more-icon">arrow_drop_down</mat-icon>
 		</button>
