--- a/Angular/src/app/pages/home/dash-admin/dash-admin.component.html
+++ b/Angular/src/app/pages/home/dash-admin/dash-admin.component.html
@@ -69,13 +69,36 @@
             </div>
         </div>
         <div class="claims">
-            <div class="col">
+			
+            <div class="col-7 chart">
                 <h5 class="card-title text-uppercase text-muted mb-0">
                     Claims Statistics
                 </h5>
                 <div class="claimsChart">
                     <div echarts [options]="options"style="height:300px"></div>
                 </div>
+            </div>
+
+            <div class="col-5 callbacks">
+				<h5 class="card-title text-uppercase text-muted mb-0">
+                    Callbacks
+					<div class="no-callbacks text-center mt-4 bg-light p-4" *ngIf="callbacks.length == 0">
+						<span >No callbacks</span>
+					</div>
+					<div class="callbacks-list" *ngIf="callbacks.length > 0">
+						<div class="callbacks-list-item" *ngFor="let callback of callbacks">
+							<div class="callbacks-list-item-action">
+								<button class="callback-btn"(click)="changeCallbackCalledStatus(callback._id,true)">
+									<mat-icon>done</mat-icon>
+								</button>
+								{{callback.user.name}}
+							</div>
+							<div class="callbacks-list-item-content">
+								<span class="callback-date">{{callback.created | date:"short"}}</span>
+							</div>
+						</div>
+					</div>
+                </h5>
             </div>
         </div>
     </div>
